# GameServer

./: .gitignore  .gitmodules  BitStream.cpp  BitStream.h  CMakeLists.txt  IStream.cpp  IStream.h  InputMemoryStream.cpp  InputMemoryStream.h  NetworkInterface.cpp  NetworkInterface.h  README.md  SockAddr.cpp  SocketAddress.cpp  SocketAddress.h  SocketHelpers.h  SocketUtils.cpp  SocketUtils.h  UDPSocket.cpp  UDPSocket.h  main.cpp
include/: BitStream.h  Entities.h  Entity.h  ReplicationUtils.h  UDPSocket.h
include/DataStructures/: InputBitStream.h  OutputBitStream.h
include/Entities/: Enemy.h  Vehicle.h
include/Replication/: EntitiesRegistry.h  RPCController.h  ReplicationController.h  ReplicationUtils.h
include/SocketUtils/: SockAddr.h  SocketHelpers.h  UDPSocket.h
include/TransferUtils/: EntitiesRegistry.h  EntityDescriptionMap.h  ReplicationController.h  ReplicationUtils.h
include/utils/: ByteSwap.h  Constants.h
src/: BitStream.cpp  Entities.cpp  Entity.cpp  SockAddr.cpp  SocketHelpers.cpp  UDPSocket.cpp  main.cpp
src/DataStructures/: InputBitStream.cpp  OutputBitStream.cpp
src/Entities/: Enemy.cpp  Vehicle.cpp
src/Replication/: RPCController.cpp  ReplicationController.cpp  ReplicationUtils.cpp
src/SocketUtils/: SockAddr.cpp  SocketHelpers.cpp  UDPSocket.cpp
src/TransferUtils/: EntityDescriptionMap.cpp  ReplicationController.cpp
src/include/: BitStream.h  SockAddr.h  SocketHelpers.h  UDPSocket.h
src/include/utils/: ByteSwap.h
tests/: BitStreamTests.cpp  ByteSwap.cpp  RPCTest.cpp  main.cpp
